tests222/tests2/test211.out
lli: <stdin>:1:1: error: expected top-level entity
line 10: variable x is not defined
^
